@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Rename field 'class' to 'character_class' because that's a reserved C++
+keyword and thus conflicts for CRE building.
+Nicolas Weeger 2010-03-14
+
 Update account handling - add character specific handling for the accounts,
 add test case, and add some missing svn keywords.  Still some more
 work to be done here
@@ -33,7 +37,7 @@ server/server.c: Add periodic saving of account information.
 test/unit/server/Makefile.am: Update for new file
 test/unit/server/check_account_char.c: New file - test for character
     management
-MSW 2010-03-09	
+MSW 2010-03-14
 
 Enable sacrificed items on altars and such to be alive, if asked for.
  server/common/button.c
